# Nexus-Scan

./: README.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Building-AppImage-via-Tauri-Compiling-nexus-scan-v1-0-_1780005768777.txt  Pasted-Create-a-production-grade-mobile-forensic-and-malware-r_1778852225882.txt  Pasted-The-CJS-build-of-Vite-s-Node-API-is-deprecated-See-http_1780004699663.txt  Pasted-d-for-more-details-vite-v5-4-21-building-for-production_1780005151724.txt
lib/db/: drizzle.config.ts
nexus-scan/: README.md  go.mod  go.sum  run.sh
nexus-scan/cmd/nexus-scan/: main.go
nexus-scan/frontend/: index.html  package.json  vite.config.ts
nexus-scan/frontend/src/: App.tsx
nexus-scan/frontend/src-tauri/: Cargo.toml  tauri.conf.json
nexus-scan/frontend/src/components/: DevicePanel.tsx  LogConsole.tsx  ScanStatusPanel.tsx  StatusBar.tsx  ThreatTable.tsx
nexus-scan/frontend/src/hooks/: useWebSocket.ts
nexus-scan/frontend/src/styles/: global.css
nexus-scan/internal/config/: config.go
nexus-scan/internal/server/: websocket.go
nexus-scan/pkg/database/: database.go  signatures.go
nexus-scan/pkg/device/: manager.go
nexus-scan/pkg/ipc/: broadcaster.go
nexus-scan/pkg/logger/: logger.go
nexus-scan/pkg/models/: models.go
nexus-scan/pkg/remediation/: remediation.go
nexus-scan/pkg/scanner/: scanner.go
nexus-scan/scripts/: build-backend.sh  build-frontend.sh  dev.sh  generate-icons.sh  install-deps.sh  package-appimage.sh  package-deb.sh  start.sh
nexus-scan/tests/: scanner_test.go
(+1 files in other folders)
