[package]
name = "nexus-scan"
version = "1.0.0"
description = "Mobile Forensic and Malware Remediation Platform"
authors = ["Nexus-Scan"]
license = ""
repository = ""
default-run = "nexus-scan"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["window-close", "window-maximize", "window-minimize", "window-unmaximize", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
